@@ -201,10 +201,10 @@ namespace ScenarioSources
         {   SC_OCTAGON_PARK,            "Octagon Park",         SCENARIO_CATEGORY_CHALLENGING   },
         {   SC_PLEASURE_ISLAND,         "Pleasure Island",      SCENARIO_CATEGORY_CHALLENGING   },
         {   SC_ICICLE_WORLDS,           "Icicle Worlds",        SCENARIO_CATEGORY_CHALLENGING   },
-        {   SC_SOUTHERN_SANDS,          "Southern Sands",       SCENARIO_CATEGORY_CHALLENGING   },
-        {   SC_TINY_TOWERS,             "Tiny Towers",          SCENARIO_CATEGORY_CHALLENGING   },
-        {   SC_NEVERMORE_PARK,          "Nevermore Park",       SCENARIO_CATEGORY_CHALLENGING   },
-        {   SC_PACIFICA,                "Pacifica",             SCENARIO_CATEGORY_CHALLENGING   },
+        {   SC_SOUTHERN_SANDS,          "Southern Sands",       SCENARIO_CATEGORY_EXPERT        },
+        {   SC_TINY_TOWERS,             "Tiny Towers",          SCENARIO_CATEGORY_EXPERT        },
+        {   SC_NEVERMORE_PARK,          "Nevermore Park",       SCENARIO_CATEGORY_EXPERT        },
+        {   SC_PACIFICA,                "Pacifica",             SCENARIO_CATEGORY_EXPERT        },
         {   SC_URBAN_JUNGLE,            "Urban Jungle",         SCENARIO_CATEGORY_EXPERT        },
         {   SC_TERROR_TOWN,             "Terror Town",          SCENARIO_CATEGORY_EXPERT        },
         {   SC_MEGAWORLD_PARK,          "Megaworld Park",       SCENARIO_CATEGORY_EXPERT        },
